--- a/style.css
+++ b/style.css
@@ -35,6 +35,11 @@ body {
     text-align: center;
 }
 
+.hero-container {
+    position: relative;
+    height: 100%;
+}
+
 .hero-text {
     position: absolute;
     width: auto;
@@ -184,10 +189,11 @@ body {
 
 .text-page3-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 50%);
+    grid-template-columns: auto 50%;
+    height: 500px;
     justify-items: center;
     align-items: center;
-    border: 1px solid blue;
+    margin-top: -4%;
 }
 
 .page3-img {
@@ -196,28 +202,167 @@ body {
     display: grid;
     justify-items: self-end;
     padding-right: 20px;
-    border: 1px solid red;
 }
 
 .page3-img img {
-    width: 50%;
+    height: 100%;
 }
 
 .page3-text {
+    display: grid;
+    grid-template-columns: 10% auto;
+    height: 360px;
+    margin-bottom: 3%;
+    margin-left: 8%;
+    margin-right: 20%;
+}
+
+.page3-text p {
+    font-size: 18px;
+}
+
+.page3-button {
+    background-color: transparent;
+    border: 2px solid #e67e22;
+    color: #e67e22;
+    text-align: center;
+    width: 40px;
+    height: 40px;
+    font-size: 17px;
+    border-radius: 50%;
+}
+
+.icons-container {
+    position: relative;
+    left: 53%;
+    margin-top: -50px;
     display: flex;
-    padding: 20px;
-    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    text-align: center;
 }
 
 .page3-icons {
     width: 150px;
+    height: 50px;
     display: flex;
     flex-direction: column;
-    border: 1px solid red;
 }
 
 .page3-icons img {
     width: 100%;
+    height: 100%;
+}
+
+.page4-img {
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(4, 25%);
+    align-items: center;
+    flex-direction: row;
+    margin-left: 11%;
+    margin-right: 9%;
+}
+
+.page4-img img {
+    width: 90%;
+}
+
+.page4-text {
+    display: grid;
+    justify-content: start;
+    grid-template-columns: 10% auto;
+    align-items: center;
+    flex-direction: row;
+    margin-left: 10%;
+    margin-right: 10%;
+    /* border: 2px solid red; */
+}
+
+.page4-text ion-icon {
+    width: 100%;
+    height: 100%;
+    /* border: 2px solid red; */
+}
+
+.page4-text p {
+    /* border: 2px solid red; */
+}
+
+.page4-container {
+    display: grid;
+    justify-content: start;
+    align-content: start;
+    grid-template-columns: repeat(4, 25%);
+    flex-direction: row;
+    margin-left: 9%;
+    margin-right: 11%;
+    /* border: 2px solid blue; */
+    padding-bottom: 10%;
+}
+
+.text-page5-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.text-page5-text {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    color: white;
+    z-indent: 2;
+    left: 0;
+    top: 0;
+}
+
+.page5-container {
+    width: auto;
+    height: auto;
+    display: grid;
+    justify-content: start;
+    align-content: start;
+    grid-template-columns: repeat(3, auto);
+    flex-direction: row;
+    margin-left: 9%;
+    margin-right: 11%;
+    /* border: 2px solid blue; */
+    padding-bottom: 10%;
+}
+
+.page5-text {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    grid-template-rows: repeat(auto, auto);
+    margin-left: 9%;
+    margin-right: 11%;
+    /* border: 2px solid blue; */
+    padding-bottom: 10%;
+    font-style: oblique;
+}
+
+.head-pics {
+    margin-top: 5%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    /* border: 2px solid red; */
+}
+
+.head-pics p {
+    margin-left: 5%;
+    margin-top: 12px;
+    font-style: italic;
+    /* border: 2px solid red; */
+}
+
+.head-pics img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
 }
 
 ion-icon {
